[package]
name = "quasar"
version = "0.1.0"
authors = ["levibland <levi.bland@icloud.com>"]
edition = "2021"
homepage = "https://github.com/levibland/quasar"
repository = "https://github.com/levibland/quasar"
readme = "README.md"
license = "MIT"
description = "Stack based VM 🌌"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "alum"
path = "./langs/alum.rs"


[dependencies]
flame = "0.2.2"
flamer = "0.3"
im-rc = "14.3.0"
fnv = "1.0.3"
colored = "1.9.3"
logos = "0.11.4"